tests/models/enum/unnamed/f64/fail/le.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(le = 2)]
        f64
    ),
}
fn main() {}
